Configure production cloud deployment for Render with Docker and PostgreSQL support